base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fss-deployment
  namespace: fss-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fss-app
  template:
    metadata:
      labels:
        app: fss-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
