base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fss-service
  namespace: fss-app
  labels:
    app: fss-app
spec:
  selector:
    app: fss-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
