base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fss-ingress
  #namespace: fss-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: fss-app.local
    http:
      paths:
      - path: /php
        pathType: Prefix
        backend:
          service:
            name: php-fss-service
            port:
              number: 80
      - path: /python
        pathType: Prefix
        backend:
          service:
            name: python-fss-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-fss-service
            port:
              number: 80
